refactor slightly based on Sonar reports